// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Should handle assert method calls like assert.ok(), assert.strictEqual() 1`] = `
"import assert from 'assert';
;
;
;
;
export function shouldRemove() {
    ;
    ;
    const result = compute();
    ;
    return result;
}
"
`;

exports[`Should handle import * as assert from 'assert' 1`] = `
"import * as assert from 'assert';
;
export function shouldRemove() {
    ;
    const result = compute();
    ;
    return result;
}
"
`;

exports[`Should handle import { assert, fail } from 'assert' 1`] = `
"import { assert, fail } from 'assert';
;
;
export function shouldRemove() {
    ;
    const result = compute();
    ;
    ;
    return result;
}
"
`;

exports[`Should handle import { fail } and import * as assert 1`] = `
"import { fail } from 'assert';
import * as assert from 'assert';
;
;
export function shouldRemove() {
    ;
    const result = compute();
    ;
    ;
    return result;
}
"
`;

exports[`Should handle import from 'node:assert' 1`] = `
"import assert from 'node:assert';
;
export function shouldRemove() {
    ;
    const result = compute();
    ;
    return result;
}
"
`;

exports[`Should handle separate import { assert } and import { fail } 1`] = `
"import { assert } from 'assert';
import { fail } from 'assert';
;
;
export function shouldRemove() {
    ;
    const result = compute();
    ;
    ;
    return result;
}
"
`;

exports[`Should load remove-assert wasm plugin correctly 1`] = `
";
export function shouldRemove() {
    ;
    const result = compute();
    ;
    return result;
}
export function locallyDefinedAssert() {
    const assert = ()=>{};
    assert(true);
}
export function capturedAssert() {
    const assert = ()=>{};
    function innerFunc() {
        assert(true);
    }
}
export function overrideInParam(assert) {
    assert(true);
}
export function complexLogic() {
    if (x > 0) {
        ;
        process(x);
    }
    const arr = [
        1,
        2,
        3
    ];
    ;
    return arr;
}
"
`;
